# 453-1-Immediate

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README.txt  common_matrices.cpp  main.cpp  mat4f.cpp
include/: buffer_object.hpp  cube.hpp  mat4f.hpp  obj_mesh.hpp  program.hpp  triangle.hpp  vertex_array_object.hpp
src/: common_matrices.cpp  cube.cpp  image.cpp  main.cpp  main2.cpp  obj_mesh.cpp  program.cpp  sierpinski.cpp  vbo_tools.cpp
src/shaders/: flat_fs.glsl  flat_tex_fs.glsl  flat_tex_vs.glsl  gouraud_fs.glsl  gouraud_tex_fs.glsl  gouraud_vs.glsl  normal_fs.glsl  phong_tex_fs.glsl  phong_tex_vs.glsl
